# doks-flux-demo

./: .env.example  .gitignore  .mise.toml  LICENSE  README.md  pyproject.toml
.mise/tasks/: _bootstrap  _versions
kubernetes/clusters/doks/: apps-uptime-kuma-backups.yaml  apps-uptime-kuma.yaml  infra-edge.yaml  kustomization.yaml
kubernetes/clusters/doks/apps/uptime-kuma-cloud/: ingress-tailscale.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml  statefulset.yaml
kubernetes/clusters/doks/apps/uptime-kuma-cloud/backups/: backup-cronjob.yaml  backup-rbac.yaml  backup-scripts.yaml  kustomization.yaml
kubernetes/clusters/doks/flux-system/: gotk-sync.yaml
kubernetes/clusters/doks/infrastructure/edge/tailscale/: helmrelease.yaml
src/doks_flux_demo/: __init__.py  cli.py  config.py  doctl.py  env.py  flux.py  paths.py  runner.py  status.py  tailscale.py  tofu.py
tofu/: root.hcl
tofu/deployments/doks/: terragrunt.hcl
tofu/modules/doks-cluster/: main.tf  outputs.tf  variables.tf
