[project]
name = "doks-flux-demo"
version = "0.1.0"
description = "CLI for the doks-flux-demo: provision a DOKS cluster, bootstrap Flux, install Tailscale ingress, deploy uptime-kuma."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "questionary>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
doks-flux-demo = "doks_flux_demo.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doks_flux_demo"]
